<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_browse_products"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.assignment2.BrowseProductsActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_txt" />

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:id="@+id/name_add" />

    <TextView
        android:text="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/desc_txt" />

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:id="@+id/desc_add" />

    <TextView
        android:text="@string/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/price_txt" />

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:id="@+id/price_d_add" />

    <TextView
        android:text="@string/price_bitcoins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/price2_txt" />

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/price_bt_add" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prev_btn"
            android:layout_weight="1" />

        <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_btn"
            android:layout_weight="1" />

        <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next_btn"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
